--- a/assets/css/beginning.css
+++ b/assets/css/beginning.css
@@ -1,6 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Teko:wght@300;500;600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap');
 
+audio {
+  position: absolute;
+  z-index: 6;
+  bottom: 5%;
+  left: 2%;
+}
+
 .polygon-beg {
     clip-path: polygon(48% 0, 100% 0, 100% 100%, 38% 100%);
     width: 150rem;
