--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,353 +1,347 @@
-@import url('https://fonts.googleapis.com/css2?family=Anton&family=Poppins:ital,wght@0,200;0,300;0,400;1,500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Anton&family=Poppins:ital,wght@0,200;0,300;0,400;1,500&family=Roboto:wght@100;400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Anton&family=Poppins:ital,wght@0,200;0,300;0,400;1,500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Anton&family=Poppins:ital,wght@0,200;0,300;0,400;1,500&family=Roboto:wght@100;400;500;700&display=swap");
 
 :root {
-    --green: #23B732;
-    --blue: #3EADDE;
-    --orange: #FA9C1F;
-    --red: #DE3E3E;
-    --purple: #620069;
-    --gray: #EBEBEB;
-    --gray-light: #ebebeb7c;
-    --orange-light:#FCB018;   
-  }
-  
+  --blue: #3eadde;
+  --orange: #fa9c1f;
+  --red: #de3e3e;
+  --purple: #620069;
+  --gray: #ebebeb;
+  --gray-light: #ebebeb7c;
+  --orange-light: #fcb018;
+  --green: #23b732;
+}
 
 .img-logo-overwatch {
-    width: 27.5rem;
-    height: 15rem;
-    margin-top: 6rem !important;
+  height: 15rem;
+  margin-top: 6rem !important;
+  width: 27.5rem;
 }
 
 .welcome-play {
-    font-family: 'Roboto', sans-serif;    
-    font-weight: bold;
-    margin-left: 10rem;
-    border-left: 2px solid gray;
+  font-weight: bold;
+  margin-left: 10rem;
+  border-left: 2px solid gray;
+  font-family: "Roboto", sans-serif;
 }
 
 .container-father-form {
-    margin-top: 5rem;
+  margin-top: 5rem;
 }
 
 form {
-    transform: skewX(-14deg);
+  transform: skewX(-14deg);
 }
 
 .logo-platforms {
-    width: 1.5rem;
+  width: 1.5rem;
 }
 
 section {
-    height: 100vh !important;
+  height: 100vh !important;
 }
 
 .input {
-    background-color: var(--gray-light);
-    height: 3.5rem;
-    width: 25rem !important;
-    color: #BCB6B6;
-    font-weight: bolder;
+  height: 3.5rem;
+  width: 25rem !important;
+  color: #bcb6b6;
+  font-weight: bolder;
+  background-color: var(--gray-light);
 }
 
 .img-logo-overwatch {
-    width: 27.5rem;
-    height: 15rem;
-    margin-top: 6rem !important;
+  height: 15rem;
+  margin-top: 6rem !important;
+  width: 27.5rem;
 }
 
 .button-acess {
-    background-color: var(--orange);
-    margin-bottom: 6rem;    
-    height: 3.5rem;
-    width: 25rem !important;
+  margin-bottom: 6rem;
+  height: 3.5rem;
+  width: 25rem !important;
+  background-color: var(--orange);
 }
 
 .play-all {
-    background-color: var(--gray);
-    width: 27rem;
-    height: 6rem;
-    margin-top: 4rem;
-    font-size: 1.2rem;
+  width: 27rem;
+  height: 6rem;
+  margin-top: 4rem;
+  font-size: 1.2rem;
+  background-color: var(--gray);
 }
 
 .w-70 {
-    width: 50%
+  width: 50%;
 }
 
 .triangle {
-    width: 11.5rem;
-    height: 100vh;
-    background-color: var(--orange);
-    clip-path: polygon(88% 0, 0 0, 40% 50%);
-    left: 22px; 
-    z-index: 2;   
+  height: 100vh;
+  background-color: var(--orange);
+  clip-path: polygon(88% 0, 0 0, 40% 50%);
+  left: 22px;
+  z-index: 2;
+  width: 11.5rem;
 }
 
 .parallelogram {
-    width: 69rem;
-    height: 100vh;
-    background-color: rgb(0, 0, 0);
-    clip-path: polygon(15.8% 0%, 100% 0%, 95% 100%, 0% 100%);
-    z-index: 1;    
-    left: 4px;
-    top: 0px;
-    background-image: url(/assets/images/coliseu1.png);
-    background-position: -300px -60px; 
-    background-repeat: no-repeat; 
-    background-size: 170%;
-    filter: brightness(8%);  
-    opacity: 90%;
+  height: 100vh;
+  background-color: rgb(0, 0, 0);
+  clip-path: polygon(15.8% 0%, 100% 0%, 95% 100%, 0% 100%);
+  z-index: 1;
+  left: 4px;
+  top: 0px;
+  background-image: url(/assets/images/coliseu1.png);
+  background-position: -300px -60px;
+  background-repeat: no-repeat;
+  background-size: 170%;
+  filter: brightness(8%);
+  opacity: 90%;
+  width: 69rem;
 }
 
 .parallelogram-2 {
-    width: 55rem;
-    height: 100vh;
-    background-color: var(--orange);
-    clip-path: polygon(78% 0, 100% 0%, 100% 100%, 62% 100%);    
-    left: 357px;
-    top: 0px;
-    z-index: 3;    
+  height: 100vh;
+  background-color: var(--orange);
+  clip-path: polygon(78% 0, 100% 0%, 100% 100%, 62% 100%);
+  left: 357px;
+  top: 0px;
+  z-index: 3;
+  width: 55rem;
 }
 
 .ellipse {
-    width: 70rem;
-    height: 70rem;
-    bottom: -38rem;
-    right: -54rem;
-    margin: 20px;    
-    border-radius: 50%;
-    background: transparent;    
-    border: 2px solid rgb(255, 255, 255); 
-    z-index: 7;  
+  height: 70rem;
+  bottom: -38rem;
+  right: -54rem;
+  margin: 20px;
+  border-radius: 50%;
+  background: transparent;
+  border: 2px solid rgb(255, 255, 255);
+  z-index: 7;
+  width: 70rem;
 }
 
 .container-arrows {
-    top: 70px;
-    left: 1007px;    
-    z-index: 4;
-    width: 189px;
-    height: 105px;
+  left: 1007px;
+  z-index: 4;
+  width: 189px;
+  height: 105px;
+  top: 70px;
 }
 
 .arrow-common {
-    width: 100px;
-    height: 55px;
-    background-color: var(--orange-light);
-    clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
-    transform: rotate(270deg);
-    opacity: 0.8;    
+  height: 55px;
+  background-color: var(--orange-light);
+  clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+  transform: rotate(270deg);
+  opacity: 0.8;
+  width: 100px;
 }
 
 .imgs-central {
-    z-index: 5;
-    top: 12rem;
-    left: 0
-    
+  top: 12rem;
+  left: 0;
+  z-index: 5;
 }
 
 .character {
-    width: 45rem;
-    right: -40rem;
-    z-index: 1;
+  right: -40rem;
+  z-index: 1;
+  width: 45rem;
 }
 
 .logo-central {
-    width: 30rem;
-    top: 13rem;
-    right: -50rem;
-    opacity: 0.3;    
+  top: 13rem;
+  right: -50rem;
+  opacity: 0.3;
+  width: 30rem;
 }
 
 .border1 {
-    width: 5rem;
-    height: 31rem;
-    border-left: 1rem solid #F5F5F5; 
-    z-index: 2;
-    top:0;
-    left: 1.3rem;
-    border-radius: 5%;
+  height: 31rem;
+  border-left: 1rem solid #f5f5f5;
+  z-index: 2;
+  top: 0;
+  left: 1.3rem;
+  border-radius: 5%;
+  width: 5rem;
 }
 
 .border2 {
-    width: 5rem;
-    height: 61rem;
-    border-left: 0.5rem solid #F5F5F5; 
-    z-index: 2;
-    top:0;
-    left: 1.6rem;
-    border-radius: 5%;
+  height: 61rem;
+  border-left: 0.5rem solid #f5f5f5;
+  z-index: 2;
+  top: 0;
+  left: 1.6rem;
+  border-radius: 5%;
+  width: 5rem;
 }
 
 @media only screen and (min-width: 1280px) and (max-width: 1365px) {
   .border1 {
-    height: 23rem;    
+    height: 23rem;
   }
 
   .img-logo-overwatch {
-    width: 20.5rem;
     height: 10rem;
     margin-top: 1rem !important;
+    width: 20.5rem;
   }
 
-.button-acess {
-  margin-bottom: 6rem;    
-  height: 3.5rem;
-  width: 75% !important;
-}
+  .button-acess {
+    margin-bottom: 6rem;
+    height: 3.5rem;
+    width: 75% !important;
+  }
 
-.input {
-  width: 75% !important;
-}
+  .input {
+    width: 75% !important;
+  }
 
-  
-.play-all {
-    margin-top: -4rem;
-    height: 4rem;         
+  .play-all {
+    height: 4rem;
     width: 75%;
+    margin-top: -4rem;
   }
 
   .play-all-platsforms {
     font-size: 0.8rem;
   }
 
-.character {
-  right: -35rem;
-  top: -8rem;        
-  width: 37rem;
-}
+  .character {
+    right: -35rem;
+    top: -8rem;
+    width: 37rem;
+  }
 
-.logo-central {
-  top: 3rem;
-  right: -42rem;
-  opacity: 0.3;    
-  width: 25rem;
-}
+  .logo-central {
+    top: 3rem;
+    right: -42rem;
+    opacity: 0.3;
+    width: 25rem;
+  }
 
   .parallelogram {
-    width: 55rem;        
-    z-index: 2;    
+    z-index: 2;
     left: 1.8rem;
-    top: 0px;     
+    top: 0px;
+    width: 55rem;
   }
-  
+
   .parallelogram-2 {
-    left: 5rem;    
+    left: 5rem;
   }
-   
+
   .container-arrows {
-    width: 6rem;
     height: 10rem;
-    left: 46rem;    
-  }    
-  
+    left: 46rem;
+    width: 6rem;
+  }
+
   .arrow-common {
+    height: 2rem;
     width: 2rem;
-    height: 2rem;         
-   }   
+  }
 
   .ellipse {
-    width: 40rem;
     bottom: -20rem;
-    right: -30rem;         
+    right: -30rem;
     height: 40rem;
+    width: 40rem;
   }
 }
 
 @media only screen and (min-width: 1366px) and (max-width: 1600px) {
   .border1 {
-    height: 23rem;    
-  } 
-   
+    height: 23rem;
+  }
+
   .play-all {
-        margin-top: -4rem;
-        width: 75%;         
-    }
+    width: 75%;
+    margin-top: -4rem;
+  }
 
-    .play-all-platsforms {
-        font-size: 1rem;
-    }
+  .play-all-platsforms {
+    font-size: 1rem;
+  }
 
-    .logo-central {
-        width: 25rem;
-        top: 10rem;
-        right: -50rem;
-    }
+  .logo-central {
+    width: 25rem;
+    top: 10rem;
+    right: -50rem;
+  }
 
-    .img-logo-overwatch {
-        width: 20.5rem;
-        height: 10rem;
-        margin-top: 1rem !important;
-    }
+  .img-logo-overwatch {
+    height: 10rem;
+    margin-top: 1rem !important;
+    width: 20.5rem;
+  }
 
-    .button-acess {
-        margin-bottom: 6rem;    
-        height: 3.5rem;
-        width: 75% !important;
-    }
+  .button-acess {
+    margin-bottom: 6rem;
+    width: 75% !important;
+    height: 3.5rem;
+  }
 
-    .input {
-        width: 75% !important;
-    }
+  .input {
+    width: 75% !important;
+  }
 
-    .character {
-        width: 37rem;
-        right: -35rem;
-        top: -7rem;        
-    }
+  .character {
+    width: 37rem;
+    right: -35rem;
+    top: -7rem;
+  }
 
-    .logo-central {
-        width: 28rem;
-        top: 4rem;
-        right: -45rem;
-        opacity: 0.3;    
-    }
-    
-    .parallelogram {
-        width: 55rem;        
-        background-color: rgb(0, 0, 0);
-        clip-path: polygon(15.8% 0%, 100% 0%, 95% 100%, 0% 100%);
-        z-index: 2;    
-        left: 4px;
-        top: 0px;        
-    }
+  .logo-central {
+    width: 28rem;
+    top: 4rem;
+    right: -45rem;
+    opacity: 0.3;
+  }
 
-    .parallelogram-2 {
-        width: 55rem;
-        height: 100vh;        
-        clip-path: polygon(78% 0, 100% 0%, 100% 100%, 62% 100%);    
-        left: 8rem;
-        top: 0px;
-        z-index: 3;        
-    }
+  .parallelogram {
+    width: 55rem;
+    background-color: rgb(0, 0, 0);
+    clip-path: polygon(15.8% 0%, 100% 0%, 95% 100%, 0% 100%);
+    z-index: 2;
+    left: 4px;
+    top: 0px;
+  }
 
-    .triangle {
-        width: 10vw;
-        height: 100vh;
-        background-color: var(--orange);
-        clip-path: polygon(88% 0, 0 0, 40% 50%);
-        left: 22px; 
-        z-index: 2;   
-    }
+  .parallelogram-2 {
+    width: 55rem;
+    height: 100vh;
+    clip-path: polygon(78% 0, 100% 0%, 100% 100%, 62% 100%);
+    left: 8rem;
+    top: 0px;
+    z-index: 3;
+  }
 
-    .container-arrows {
-        left: 49rem;    
-        width: 10rem;
-        height: 10rem;
-    }
-    
-    .arrow-common {
-        width: 2.3rem;
-        height: 2.3rem;         
-    }   
+  .triangle {
+    width: 10vw;
+    height: 100vh;
+    background-color: var(--orange);
+    clip-path: polygon(88% 0, 0 0, 40% 50%);
+    left: 22px;
+    z-index: 2;
+  }
 
-    .ellipse {
-        width: 40rem;
-        height: 40rem;
-        bottom: -20rem;
-        right: -30rem;         
-    }
-    
+  .container-arrows {
+    left: 49rem;
+    width: 10rem;
+    height: 10rem;
+  }
+
+  .arrow-common {
+    width: 2.3rem;
+    height: 2.3rem;
+  }
+
+  .ellipse {
+    width: 40rem;
+    height: 40rem;
+    bottom: -20rem;
+    right: -30rem;
+  }
 }
-
-
