--- a/assets/css/beginning.css
+++ b/assets/css/beginning.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Teko:wght@300;500;600&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Teko:wght@300;500;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap");
 
 audio {
   position: absolute;
@@ -9,13 +9,13 @@ audio {
 }
 
 .polygon-beg {
-    clip-path: polygon(48% 0, 100% 0, 100% 100%, 38% 100%);
-    width: 150rem;
-    height: 100vh;
-    background-color: #1A0024;
-    left:-73rem;
-    top: 0px;
-    z-index: 1;   
+  clip-path: polygon(48% 0, 100% 0, 100% 100%, 38% 100%);
+  width: 150rem;
+  height: 100vh;
+  background-color: #1a0024;
+  left: -73rem;
+  top: 0px;
+  z-index: 1;
 }
 
 .menu {
@@ -23,30 +23,30 @@ audio {
 }
 
 .polygon-beg2 {
-    clip-path: polygon(73% 0, 100% 0, 100% 100%, 38% 100%);
-    width: 40rem;
-    height: 100vh;
-    background-color: #FA9C1F;
-    left: 20rem;
-    top: 0px;
-    z-index: 2;   
+  clip-path: polygon(73% 0, 100% 0, 100% 100%, 38% 100%);
+  width: 40rem;
+  height: 100vh;
+  background-color: #fa9c1f;
+  left: 20rem;
+  top: 0px;
+  z-index: 2;
 }
 
 .polygon-beg2-dva {
   clip-path: polygon(73% 0, 100% 0, 100% 100%, 38% 100%);
   width: 40rem;
   height: 100vh;
-  background-color: #DA89D0;
+  background-color: #da89d0;
   left: 20rem;
   top: 0px;
-  z-index: 2;   
+  z-index: 2;
 }
 
 nav {
   height: 8rem;
   z-index: 4;
-  background-color: transparent;   
-  font-family: 'Play', sans-serif;
+  background-color: transparent;
+  font-family: "Play", sans-serif;
   font-weight: 700;
   font-size: 1.8rem;
   gap: 20rem;
@@ -57,10 +57,10 @@ nav {
   left: 6rem;
 }
 
-.menu-item-active {    
+.menu-item-active {
   padding-inline: 1.5rem;
   transform: skewX(-10deg);
-  background-color: #DE3E3E;
+  background-color: #de3e3e;
   color: white;
   padding-block: 0.5rem;
 }
@@ -71,7 +71,7 @@ nav {
 }
 
 .menu-item:hover {
-  color: #FA9C1F !important;
+  color: #fa9c1f !important;
 }
 
 .logo {
@@ -79,30 +79,30 @@ nav {
 }
 
 .avatar {
-  width: 4.8rem;    
+  width: 4.8rem;
 }
 
 .play-ranked {
   font-weight: 700;
   margin-top: 21rem;
   margin-left: 3rem;
-  font-size: 4rem;    
+  font-size: 4rem;
   font-style: italic;
   z-index: 2;
-  font-family: 'Play', sans-serif;
+  font-family: "Play", sans-serif;
 }
 
 .options:hover {
   font-size: 4.5rem;
-  color: #1A0024;
+  color: #1a0024;
 }
 
 .arrow-choose {
   height: 5rem;
-  background-color: #FA9C1F;
+  background-color: #fa9c1f;
   transform: rotate(45deg);
   left: -6.5rem;
-  top: 0.5rem;    
+  top: 0.5rem;
   width: 5rem;
 }
 
@@ -115,95 +115,107 @@ nav {
 }
 
 .heros-big {
-    font-family: 'Play', sans-serif;
-    font-size: 5.5rem;
-    font-weight: 700;
-    font-style: italic;
-    top: 27.5rem;
-    left: 41rem;
-    z-index: 2;
-    transform: rotate(270deg);
+  font-family: "Play", sans-serif;
+  font-size: 5.5rem;
+  font-weight: 700;
+  font-style: italic;
+  top: 27.5rem;
+  left: 41rem;
+  z-index: 2;
+  transform: rotate(270deg);
 }
 
 .rectangle {
-    width: 16rem;
-    height: 5.5rem;
-    background-color: white;
+  width: 16rem;
+  height: 5.5rem;
+  background-color: white;
 }
 
 .square {
-    width: 5.5rem;
-    height: 5.5rem;
-    border: 1rem solid white;
+  width: 5.5rem;
+  height: 5.5rem;
+  border: 1rem solid white;
 }
 .square-1 {
-    background-color: white;
+  background-color: white;
 }
 
 .square-2 {
-    background-color: #3EADDE;
-    border: 1rem solid #3EADDE;
+  background-color: #3eadde;
+  border: 1rem solid #3eadde;
 }
 
 .skew {
-    transform: skewX(-9deg);
+  transform: skewX(-9deg);
 }
 
 .arrows {
-    width: 5.8rem;   
-    z-index: 5;
-    top: 45rem;
-    left: 48rem;
+  width: 5.8rem;
+  z-index: 5;
+  top: 45rem;
+  left: 48rem;
 }
 
 .border1 {
-    width: 20rem;
-    height: 32rem;
-    transform: skewX(-14deg);
-    border-left: 1rem solid #6D007B;    
-    z-index: 4;    
-    top: 0rem;
-    left: -3rem;
+  width: 20rem;
+  height: 32rem;
+  transform: skewX(-14deg);
+  border-left: 1rem solid #6d007b;
+  z-index: 4;
+  top: 0rem;
+  left: -3rem;
 }
 
-.border2-beginning{
-    width: 20rem;
-    height: 32rem;
-    transform: skewX(-14deg);
-    border-left: 0.5rem solid #6D007B;
-    z-index: 6;    
-    top: 30rem;
-    left: -10.2rem;
+.border2-beginning {
+  width: 20rem;
+  height: 32rem;
+  transform: skewX(-14deg);
+  border-left: 0.5rem solid #6d007b;
+  z-index: 6;
+  top: 30rem;
+  left: -10.2rem;
 }
 
 .circle1 {
-    width: 25rem;
-    height: 25rem;    
-    z-index: 3;
-    border-radius: 50%;
-    top: -3rem;
-    left: -2rem;
-    background: radial-gradient(circle, rgba(27,0,122,1) 5%, rgba(26,0,36,1) 70%);
+  width: 25rem;
+  height: 25rem;
+  z-index: 3;
+  border-radius: 50%;
+  top: -3rem;
+  left: -2rem;
+  background: radial-gradient(
+    circle,
+    rgba(27, 0, 122, 1) 5%,
+    rgba(26, 0, 36, 1) 70%
+  );
 }
 
 .circle2 {
   width: 25rem;
-  height: 25rem;    
+  height: 25rem;
   z-index: 3;
   border-radius: 50%;
   top: 20rem;
   left: 10rem;
-  background: radial-gradient(circle, rgba(27,0,122,1) 5%, rgba(26,0,36,1) 70%);
+  background: radial-gradient(
+    circle,
+    rgba(27, 0, 122, 1) 5%,
+    rgba(26, 0, 36, 1) 70%
+  );
 }
 
 .circle3 {
   width: 25rem;
-  height: 25rem;    
+  height: 25rem;
   z-index: 2;
   border-radius: 50%;
   top: 50rem;
   left: -14rem;
-  background: radial-gradient(circle, rgba(27,0,122,1) 5%, rgba(26,0,36,1) 70%);
+  background: radial-gradient(
+    circle,
+    rgba(27, 0, 122, 1) 5%,
+    rgba(26, 0, 36, 1) 70%
+  );
 }
 
 .character1 {
@@ -249,46 +261,46 @@ nav {
   .square {
     width: 4rem;
     height: 4rem;
-  }  
+  }
 
   .polygon-beg {
-    width: 70rem;    
-    left:-30rem;   
-    z-index: 1;   
+    width: 70rem;
+    left: -30rem;
+    z-index: 1;
     clip-path: polygon(46% 0, 100% 0, 100% 100%, 32% 100%);
   }
 
   .polygon-beg2 {
     clip-path: polygon(53% 0, 100% 0, 100% 100%, 36% 100%);
     width: 40rem;
-    height: 100vh;    
+    height: 100vh;
     left: 12rem;
-    top: 0px; 
-    z-index: 4;  
-}
+    top: 0px;
+    z-index: 4;
+  }
 
-.polygon-beg2-dva {
-  clip-path: polygon(53% 0, 100% 0, 100% 100%, 36% 100%);
-  width: 40rem;
-  height: 100vh;    
-  left: 12rem;
-  top: 0px; 
-  z-index: 4;  
-}
+  .polygon-beg2-dva {
+    clip-path: polygon(53% 0, 100% 0, 100% 100%, 36% 100%);
+    width: 40rem;
+    height: 100vh;
+    left: 12rem;
+    top: 0px;
+    z-index: 4;
+  }
 
-  .play-ranked {    
+  .play-ranked {
     margin-top: 15rem;
     margin-left: 3rem;
-    font-size: 3rem;    
-}
+    font-size: 3rem;
+  }
 
-.options:hover {
-  font-size: 3.25rem;
-}
+  .options:hover {
+    font-size: 3.25rem;
+  }
 
-  .arrow-choose {   
+  .arrow-choose {
     left: -6.5rem;
-    top: 0rem;    
+    top: 0rem;
     width: 4.5rem;
   }
 
@@ -300,38 +312,38 @@ nav {
     width: 33rem;
   }
 
-  .border1 {  
-    height: 22rem;   
+  .border1 {
+    height: 22rem;
     left: 1rem;
   }
 
-  .border2-beginning {  
-    height: 102rem;      
+  .border2-beginning {
+    height: 102rem;
     top: -20rem;
     left: -3.75rem;
   }
 
   .circle1 {
     width: 15rem;
-    height: 15rem;    
+    height: 15rem;
     z-index: 3;
     border-radius: 50%;
     top: 0rem;
-    left: 2rem;  
+    left: 2rem;
   }
 
   .circle2 {
     width: 15rem;
-    height: 15rem;    
+    height: 15rem;
     z-index: 3;
     border-radius: 50%;
     top: 15rem;
-    left: 10rem;  
+    left: 10rem;
   }
 
   .circle3 {
     width: 15rem;
-    height: 15rem;    
+    height: 15rem;
     z-index: 2;
     border-radius: 50%;
     top: 33rem;
@@ -339,77 +351,76 @@ nav {
   }
 
   .character1 {
-  z-index: 4;
-  width: 18rem;
-  margin-left: 0rem;
-  margin-top: 4rem;
+    z-index: 4;
+    width: 18rem;
+    margin-left: 0rem;
+    margin-top: 4rem;
   }
 
   .character2 {
-  z-index: 6;
-  width: 16rem;
-  margin-left: 15rem;
-  margin-top: 0rem;
+    z-index: 6;
+    width: 16rem;
+    margin-left: 15rem;
+    margin-top: 0rem;
   }
 
-  .heros-big { 
-    font-size: 4rem; 
+  .heros-big {
+    font-size: 4rem;
     top: 21.5rem;
     left: 28rem;
-    z-index: 6; 
+    z-index: 6;
   }
 
   .arrows {
-    width: 4.8rem;   
+    width: 4.8rem;
     z-index: 6;
     top: 34rem;
     left: 33rem;
-  }    
+  }
 }
 
 @media only screen and (min-width: 1366px) and (min-width: 1919px) {
   .border1 {
     width: 20rem;
-    height: 23rem;     
+    height: 23rem;
     top: 0rem;
-    left: 1.3rem;   
-}
+    left: 1.3rem;
+  }
 
-.border2-beginning {
+  .border2-beginning {
     width: 20rem;
-    height: 32rem;        
+    height: 32rem;
     top: 25rem;
     left: -4.5rem;
-}
+  }
 
-.character1 {
-  z-index: 4;
-  align-self: end;
-  width: 20rem;
-  margin-left: -2rem;
-  margin-top: 4rem;
-}
+  .character1 {
+    z-index: 4;
+    align-self: end;
+    width: 20rem;
+    margin-left: -2rem;
+    margin-top: 4rem;
+  }
 
-.character2 {
-  z-index: 6;
-  align-self: end;
-  width: 17rem;
-  margin-left: 17rem;
-  margin-top: -20rem;
-  transform: scaleX(-1);
-}
+  .character2 {
+    z-index: 6;
+    align-self: end;
+    width: 17rem;
+    margin-left: 17rem;
+    margin-top: -20rem;
+    transform: scaleX(-1);
+  }
 
-.heros-big { 
-  font-size: 4rem; 
-  top: 21.5rem;
-  left: 30rem;   
-}
+  .heros-big {
+    font-size: 4rem;
+    top: 21.5rem;
+    left: 30rem;
+  }
 
-.arrows {
-  width: 4.8rem;   
-  z-index: 6;
-  top: 34rem;
-  left: 35rem;
-}   
+  .arrows {
+    width: 4.8rem;
+    z-index: 6;
+    top: 34rem;
+    left: 35rem;
+  }
 }
-
