--- a/assets/css/heros.css
+++ b/assets/css/heros.css
@@ -1,43 +1,43 @@
-@import url('https://fonts.googleapis.com/css2?family=Audiowide&family=Play:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Audiowide&family=Play:wght@400;700&display=swap");
 
 .animate__fadeIn {
   --animate-duration: 1s;
 }
 
 .heros-polygon {
-    clip-path: polygon(48% 0, 100% 0, 100% 100%, 38% 100%);
-    width: 160rem;
-    height: 100vh;
-    background-image: url(/assets/images/coliseu1.png);
-    background-color: rgba(0, 0, 0, 0.952);
-    background-position: 40rem 0rem; 
-    background-repeat: no-repeat; 
-    background-size: contain;
-    filter: brightness(8%);  
-    opacity: 90%;    
-    left:-78rem;
-    top: 0px;
-    z-index: 1
+  clip-path: polygon(48% 0, 100% 0, 100% 100%, 38% 100%);
+  width: 160rem;
+  height: 100vh;
+  background-image: url(/assets/images/coliseu1.png);
+  background-color: rgba(0, 0, 0, 0.952);
+  background-position: 40rem 0rem;
+  background-repeat: no-repeat;
+  background-size: contain;
+  filter: brightness(8%);
+  opacity: 90%;
+  left: -78rem;
+  top: 0px;
+  z-index: 1;
 }
 
 .rectangle-heros {
-    width: 21.5rem;
-    height: 5.5rem;
-    background-color: white;    
+  width: 21.5rem;
+  height: 5.5rem;
+  background-color: white;
 }
 
 .avatar-heros {
-    transform: skewX(10deg);
+  transform: skewX(10deg);
 }
 
 .container-avatar::after {
-    content: "●";
-    position: absolute;
-    bottom: -0.5rem;
-    font-size: 1.5rem;
-    left: 4.9rem;
-    transform: skewX(10deg);
-    color: #23B732;
+  content: "●";
+  position: absolute;
+  bottom: -0.5rem;
+  font-size: 1.5rem;
+  left: 4.9rem;
+  transform: skewX(10deg);
+  color: #23b732;
 }
 
 .container-avatar-dva::after {
@@ -47,39 +47,39 @@
   font-size: 1.5rem;
   left: 4.5rem;
   transform: skewX(10deg);
-  color: #23B732;
+  color: #23b732;
 }
 
 .avatar-dva {
-    width: 4.8rem;
-    height: 4.8rem;
-    background-image: url(/assets/images/d.va-avatar.png);
-    background-size: 200%;
-    background-repeat: no-repeat;
-    background-position: -1.5rem -1.5rem;
-    transform: scaleX(-1) skewX(-10deg);
+  width: 4.8rem;
+  height: 4.8rem;
+  background-image: url(/assets/images/d.va-avatar.png);
+  background-size: 200%;
+  background-repeat: no-repeat;
+  background-position: -1.5rem -1.5rem;
+  transform: scaleX(-1) skewX(-10deg);
 }
 
 .icons-menu {
-    width: 3rem;
-    height: 3rem;
-    transform: skewX(10deg);
+  width: 3rem;
+  height: 3rem;
+  transform: skewX(10deg);
 }
 
 .circle-heros {
-    width: 58rem;
-    height: 58rem;
-    border: 0.15rem solid #FA9C1F;
-    border-radius: 50%;
-    z-index: 2;
-    left: -4rem;
-    top: 14rem;
+  width: 58rem;
+  height: 58rem;
+  border: 0.15rem solid #fa9c1f;
+  border-radius: 50%;
+  z-index: 2;
+  left: -4rem;
+  top: 14rem;
 }
 
 .circle-heros-dva {
   width: 58rem;
   height: 58rem;
-  border: 0.15rem solid #DA89D0;
+  border: 0.15rem solid #da89d0;
   border-radius: 50%;
   z-index: 2;
   left: -4rem;
@@ -87,116 +87,116 @@
 }
 
 .background-logo-heros {
-    left: 2.5rem !important;
-    top: 16.2rem !important;
+  left: 2.5rem !important;
+  top: 16.2rem !important;
 }
 
 .container-sm-circles {
-    width: 17rem;
-    top: 12.2rem;
-    left: 17rem;
-    z-index: 2;
-    gap: 1.8rem;
+  width: 17rem;
+  top: 12.2rem;
+  left: 17rem;
+  z-index: 2;
+  gap: 1.8rem;
 }
 
 .circle-hero-sm {
-    width: 4.2rem;
-    height: 4.2rem;
-    background-color: #FA9C1F;
-    border-radius: 50%;
+  width: 4.2rem;
+  height: 4.2rem;
+  background-color: #fa9c1f;
+  border-radius: 50%;
 }
 
 .circle-hero-sm-dva {
-  width: 4.2rem;  
+  width: 4.2rem;
   border-radius: 50%;
   height: 4.2rem;
-  background-color: #DA89D0;  
+  background-color: #da89d0;
 }
 
 .circle-hero-sm-exchange {
-    width: 4.2rem;
-    height: 4.2rem;
-    background-color: #FA9C1F;
-    border-radius: 50%;
+  width: 4.2rem;
+  height: 4.2rem;
+  background-color: #fa9c1f;
+  border-radius: 50%;
 }
 
 .circle-hero-sm-dva-exchange {
   width: 4.2rem;
   height: 4.2rem;
-  background-color: #DA89D0;
+  background-color: #da89d0;
   border-radius: 50%;
 }
 
 .circle-hero-sm-exchange:hover {
-    width: 4.8rem;
-    height: 4.8rem;   
+  width: 4.8rem;
+  height: 4.8rem;
 }
 
 .circle-hero-sm-dva-exchange:hover {
   width: 4.8rem;
-  height: 4.8rem; 
+  height: 4.8rem;
 }
 
 .icons-character {
-    width: 2.5rem;
-    height: 2.5rem; 
+  width: 2.5rem;
+  height: 2.5rem;
 }
 
 .icons-character-shield {
-    width: 2.8rem;
-    height: 2.8rem;
+  width: 2.8rem;
+  height: 2.8rem;
 }
 
 .big-trace {
-    width: 40rem; 
-    margin-left: 9rem;
-    margin-top: 3.8rem;   
+  width: 40rem;
+  margin-left: 9rem;
+  margin-top: 3.8rem;
 }
 
 .big-dva {
-    width: 35rem;
+  width: 35rem;
 }
 
 .infos-character2 {
-    width: 58rem;
-    height: 45rem;
-    top: 20rem;
-    left: 9rem;
-    background-color: white;    
-    z-index: 4;
-    border-radius: 5%;
+  width: 58rem;
+  height: 45rem;
+  top: 20rem;
+  left: 9rem;
+  background-color: white;
+  z-index: 4;
+  border-radius: 5%;
 }
 
 .name-character {
-    width: 37.3rem;
-    height: 4.2rem;
-    color: white;
-    z-index: 4;
-    font-family: 'Audiowide', cursive;
-    top: 13rem;
-    left: 9rem;
-    font-size: 4.5rem;
-    font-style: italic;
+  width: 37.3rem;
+  height: 4.2rem;
+  color: white;
+  z-index: 4;
+  font-family: "Audiowide", cursive;
+  top: 13rem;
+  left: 9rem;
+  font-size: 4.5rem;
+  font-style: italic;
 }
 
 .info-info {
-    width: 37.3rem;
-    height: 4.2rem;
-    border: 0.15rem solid rgba(128, 128, 128, 0.322);
+  width: 37.3rem;
+  height: 4.2rem;
+  border: 0.15rem solid rgba(128, 128, 128, 0.322);
 }
 
 .info-general {
-    height: 105%;
-    background-color: #FA9C1F;
-    margin-top: -2px;  
-    margin-left: -5px;  
+  height: 105%;
+  background-color: #fa9c1f;
+  margin-top: -2px;
+  margin-left: -5px;
 }
 
 .info-general-dva {
   height: 105%;
-  background-color: #DA89D0;
-  margin-top: -2px;  
-  margin-left: -5px;  
+  background-color: #da89d0;
+  margin-top: -2px;
+  margin-left: -5px;
 }
 
 .info-1 {
@@ -207,158 +207,158 @@
 
 @keyframes slidein {
   from {
-    width: 0%
+    width: 0%;
   }
 
-  to {    
+  to {
     width: 65%;
   }
 }
 
 .info-2 {
   animation-duration: 3.5s;
-  animation-name: slidein2-trace ;
+  animation-name: slidein2-trace;
   width: 35%;
 }
 
 @keyframes slidein2-trace {
   from {
-    width: 0%
+    width: 0%;
   }
 
-  to {    
+  to {
     width: 35%;
   }
 }
 
 .info-3 {
   animation-duration: 3.5s;
-  animation-name: slidein3-trace ;
+  animation-name: slidein3-trace;
   width: 45%;
 }
 
 @keyframes slidein3-trace {
   from {
-    width: 0%
+    width: 0%;
   }
 
-  to {    
+  to {
     width: 45%;
-  }   
+  }
 }
 
 .info-4 {
   animation-duration: 3.5s;
-  animation-name: slidein4-trace ;
+  animation-name: slidein4-trace;
   width: 85%;
 }
 
 @keyframes slidein4-trace {
   from {
-    width: 0%
+    width: 0%;
   }
 
-  to {    
+  to {
     width: 85%;
-  } 
+  }
 }
 
 .info-1-dva {
   animation-duration: 3.5s;
-  animation-name: slidein1-dva ;
+  animation-name: slidein1-dva;
   width: 85%;
 }
 
 @keyframes slidein1-dva {
   from {
-    width: 0%
+    width: 0%;
   }
 
-  to {    
+  to {
     width: 85%;
-  } 
+  }
 }
 
 .info-2-dva {
   animation-duration: 3.5s;
-  animation-name: slidein2-dva ;
+  animation-name: slidein2-dva;
   width: 50%;
 }
 
 @keyframes slidein2-dva {
   from {
-    width: 0%
+    width: 0%;
   }
 
-  to {    
+  to {
     width: 50%;
-  } 
+  }
 }
 
 .info-3-dva {
   animation-duration: 3.5s;
-  animation-name: slidein3-dva ;
+  animation-name: slidein3-dva;
   width: 50%;
 }
 
 @keyframes slidein3-dva {
   from {
-    width: 0%
+    width: 0%;
   }
 
-  to {    
+  to {
     width: 50%;
-  } 
+  }
 }
 
 .info-4-dva {
   animation-duration: 3.5s;
-  animation-name: slidein4-dva ;
+  animation-name: slidein4-dva;
   width: 60%;
 }
 
 @keyframes slidein4-dva {
   from {
-    width: 0%
+    width: 0%;
   }
 
-  to {    
+  to {
     width: 60%;
-  } 
+  }
 }
 
 .container-avatar-big {
-    width: 37.3rem;        
+  width: 37.3rem;
 }
 
 .avatar-big {
-    width: 10rem;
-    top: 4rem;
-    left: 17rem;  
+  width: 10rem;
+  top: 4rem;
+  left: 17rem;
 }
 
 .avatar-big-dva {
-    width: 10rem;
-    height: 10rem;
-    background-image: url(/assets/images/d.va-avatar.png);
-    background-size: 200%;
-    background-repeat: no-repeat;
-    background-position: -2.5rem -2.8rem;
-    transform: scaleX(-1);
-    top: 4rem;
-    left: 17rem;    
+  width: 10rem;
+  height: 10rem;
+  background-image: url(/assets/images/d.va-avatar.png);
+  background-size: 200%;
+  background-repeat: no-repeat;
+  background-position: -2.5rem -2.8rem;
+  transform: scaleX(-1);
+  top: 4rem;
+  left: 17rem;
 }
 
 .avatar-medium-border {
-    top: 51.5rem;
-    left: 12rem;
-    width: 8rem;
-    height: 8rem;
-    border: 0.15rem solid rgb(128, 128, 128, 0.322);
+  top: 51.5rem;
+  left: 12rem;
+  width: 8rem;
+  height: 8rem;
+  border: 0.15rem solid rgb(128, 128, 128, 0.322);
 }
 
 .avatar-medium {
-    width: 6.8rem;
+  width: 6.8rem;
 }
 
 .avatar-medium-dva {
@@ -368,215 +368,214 @@
   background-size: 200%;
   background-repeat: no-repeat;
   background-position: -1.5rem -2.8rem;
-  transform: scaleX(-1)
+  transform: scaleX(-1);
 }
 
 .heart-icon {
   margin: 0.8rem 1.2rem;
 }
 
-@media only screen and (min-width:1280px) and (max-width: 1366px){
-    .heros-polygon {
+@media only screen and (min-width: 1280px) and (max-width: 1366px) {
+  .heros-polygon {
     clip-path: polygon(56% 0, 100% 0, 100% 100%, 44% 100%);
     width: 90rem;
     height: 100vh;
-    background-image: url(/assets/images/coliseu1.png);    
+    background-image: url(/assets/images/coliseu1.png);
     background-color: rgba(0, 0, 0, 0.952);
     background-position: 20rem 0rem;
-    background-size: 100%;    
-    opacity: 90%;    
-    left:-47rem;
+    background-size: 100%;
+    opacity: 90%;
+    left: -47rem;
     top: 0px;
   }
 
   .rectangle-heros {
     width: 16rem;
     height: 4rem;
-    background-color: white;    
-}
+    background-color: white;
+  }
 
-.container-avatar::after {
-  bottom: -0.5rem;
-  left: 2.8rem;
-  font-size: 1rem;  
-}
+  .container-avatar::after {
+    bottom: -0.5rem;
+    left: 2.8rem;
+    font-size: 1rem;
+  }
 
-.avatar-dva {
-  width: 3.5rem;
-  height: 3.5rem;
-  background-position: -1.2rem -1rem;
-}
+  .avatar-dva {
+    width: 3.5rem;
+    height: 3.5rem;
+    background-position: -1.2rem -1rem;
+  }
 
-.container-avatar-dva::after {
-  bottom: -0.5rem;
-  font-size: 1rem;
-  left: 3.1rem;
-}
+  .container-avatar-dva::after {
+    bottom: -0.5rem;
+    font-size: 1rem;
+    left: 3.1rem;
+  }
 
-.icons-menu {
-  width: 2rem;
-  height: 2rem;
-}
+  .icons-menu {
+    width: 2rem;
+    height: 2rem;
+  }
 
   .circle-heros {
     width: 42rem;
-    height: 42rem;    
+    height: 42rem;
     left: -1rem;
-    top: 11rem; 
+    top: 11rem;
   }
 
   .circle-heros-dva {
     width: 42rem;
-    height: 42rem;    
+    height: 42rem;
     left: -1rem;
-    top: 11rem; 
+    top: 11rem;
   }
 
   .background-logo-heros {
-  top: 12.8rem !important;
-  left: 3.5rem !important;
-}
+    top: 12.8rem !important;
+    left: 3.5rem !important;
+  }
 
-.container-sm-circles {
-  width: 17rem;
-  top: 9.5rem;
-  left: 14.5rem;  
-}
+  .container-sm-circles {
+    width: 17rem;
+    top: 9.5rem;
+    left: 14.5rem;
+  }
 
-.circle-hero-sm {
-  width: 2.8rem;
-  height: 2.8rem; 
-}
+  .circle-hero-sm {
+    width: 2.8rem;
+    height: 2.8rem;
+  }
 
-.circle-hero-sm-dva {
-  width: 2.8rem;
-  height: 2.8rem; 
-}
+  .circle-hero-sm-dva {
+    width: 2.8rem;
+    height: 2.8rem;
+  }
 
-.circle-hero-sm-dva-exchange {
-  width: 2.8rem;
-  height: 2.8rem; 
-}
+  .circle-hero-sm-dva-exchange {
+    width: 2.8rem;
+    height: 2.8rem;
+  }
 
-.circle-hero-sm-exchange {
-  width: 2.8rem;
-  height: 2.8rem; 
-}
+  .circle-hero-sm-exchange {
+    width: 2.8rem;
+    height: 2.8rem;
+  }
 
-.circle-hero-sm-exchange:hover {
-  width: 3rem;
-  height: 3rem; 
-}
+  .circle-hero-sm-exchange:hover {
+    width: 3rem;
+    height: 3rem;
+  }
 
-.circle-hero-sm-dva-exchange:hover {
-  width: 3rem;
-  height: 3rem; 
-}
+  .circle-hero-sm-dva-exchange:hover {
+    width: 3rem;
+    height: 3rem;
+  }
 
-.icons-character {
-  width: 1.8rem;
-  height: 1.8rem; 
-}
+  .icons-character {
+    width: 1.8rem;
+    height: 1.8rem;
+  }
 
-.icons-character-shield {
-  bottom: 0rem;
-  right: 0rem;
-  width: 2rem;
-  height: 2rem;
-}
+  .icons-character-shield {
+    bottom: 0rem;
+    right: 0rem;
+    width: 2rem;
+    height: 2rem;
+  }
 
-.big-trace {
-  width: 28rem; 
-  margin-left: 6rem;
-  margin-top: 2rem;   
-}
+  .big-trace {
+    width: 28rem;
+    margin-left: 6rem;
+    margin-top: 2rem;
+  }
 
-.big-dva {
-  width: 25rem;
-}
+  .big-dva {
+    width: 25rem;
+  }
 
-.infos-character2 {
-  width: 39rem;
-  height: 35rem;
-  top: 15rem;
-  left: 7rem;  
-}
+  .infos-character2 {
+    width: 39rem;
+    height: 35rem;
+    top: 15rem;
+    left: 7rem;
+  }
 
-.name-character {
-  width: 37.3rem;
-  height: 4.2rem; 
-  top: 11.8rem;
-  left: 6.5rem;
-  font-size: 2.5rem; 
-}
+  .name-character {
+    width: 37.3rem;
+    height: 4.2rem;
+    top: 11.8rem;
+    left: 6.5rem;
+    font-size: 2.5rem;
+  }
 
-.info-info {
-  width: 23.3rem;
-  height: 3.2rem;  
-}
+  .info-info {
+    width: 23.3rem;
+    height: 3.2rem;
+  }
 
-.info-general {
-  height: 105%;
-  background-color: #FA9C1F;
-  margin-top: -1px;  
-  margin-left: -5px;  
-}
+  .info-general {
+    height: 105%;
+    background-color: #fa9c1f;
+    margin-top: -1px;
+    margin-left: -5px;
+  }
 
-.info-general-dva {
-  height: 105%;
-  background-color: #DA89D0;
-  margin-top: -1px;  
-  margin-left: -5px;  
-}
+  .info-general-dva {
+    height: 105%;
+    background-color: #da89d0;
+    margin-top: -1px;
+    margin-left: -5px;
+  }
 
-.container-avatar-big {
-  top: -3rem;
-  left: -5rem;
-}
+  .container-avatar-big {
+    top: -3rem;
+    left: -5rem;
+  }
 
-.avatar-big {
-  width: 6rem;
-  bottom: 5rem;
-  position: absolute;
-  bottom: 2rem;
-  right: 21rem;
-}
+  .avatar-big {
+    width: 6rem;
+    bottom: 5rem;
+    position: absolute;
+    bottom: 2rem;
+    right: 21rem;
+  }
 
-.avatar-big-dva {
-  width: 6rem;
-  height: 6rem;  
-  background-size: 180%;  
-  background-position: -1rem -1.8rem; 
-  top: 1rem;
-  left: 12rem;
-}
+  .avatar-big-dva {
+    width: 6rem;
+    height: 6rem;
+    background-size: 180%;
+    background-position: -1rem -1.8rem;
+    top: 1rem;
+    left: 12rem;
+  }
 
-.avatar-medium-border {
-  top: 34.5rem;
-  left: 3rem;
-  width: 5rem;
-  height: 5rem; 
-}
+  .avatar-medium-border {
+    top: 34.5rem;
+    left: 3rem;
+    width: 5rem;
+    height: 5rem;
+  }
 
-.avatar-medium {
-  width: 4rem;
-  height: 4rem;
-}
+  .avatar-medium {
+    width: 4rem;
+    height: 4rem;
+  }
 
-.avatar-medium-dva {
-  width: 4.3rem;
-  height: 4.3rem;
-  background-image: url(/assets/images/d.va-avatar.png);
-  background-size: 180%;
-  background-repeat: no-repeat;
-  background-position: -1rem -0.8rem;
-  transform: scaleX(-1)
-}
+  .avatar-medium-dva {
+    width: 4.3rem;
+    height: 4.3rem;
+    background-image: url(/assets/images/d.va-avatar.png);
+    background-size: 180%;
+    background-repeat: no-repeat;
+    background-position: -1rem -0.8rem;
+    transform: scaleX(-1);
+  }
 
-.heart-icon {
-  margin: 0.8rem 1rem;
-}
-
+  .heart-icon {
+    margin: 0.8rem 1rem;
+  }
 }
 
 @media only screen and (max-width: 1366px) and (min-width: 1919px) {
@@ -584,13 +583,11 @@
     top: 34.5rem;
     left: 4rem;
     width: 6rem;
-    height: 6rem; 
+    height: 6rem;
   }
 
   .avatar-medium {
     width: 5rem;
     height: 5rem;
   }
-  
- 
 }
